--- a/pages/secondPage.html
+++ b/pages/secondPage.html
@@ -5,6 +5,7 @@
 	<title>titlePlaceholder</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../style/secondPageStyle.css">
+	<link rel="stylesheet" href="../style/jointStyle.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 	</nav>
 	<menu>
 		<ul class="list" type='none'>
-			<li>palindrome</li>
+			<li>polindrome</li>
 			<li>пункт меню</li>
 			<li>пункт меню</li>
 			<li>пункт меню</li>
