--- a/pages/mainPage.html
+++ b/pages/mainPage.html
@@ -5,6 +5,7 @@
 	<title>titlePlaceholder</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../style/mainPage.css">
+	<link rel="stylesheet" href="../style/jointStyle.css">
 </head>
 
 <body>
@@ -35,13 +36,13 @@
 	</section>
 	<section class="horizontalPlacement">
 		<div class="frame">
-			<div class="insides" id="1">1</div>
+			<div class="insides"><p class="textInBox">1</p></div>
 		</div>
 		<div class="frame">
-			<div class="insides">2</div>
+			<div class="insides"><p class="textInBox">2</p></div>
 		</div>
 		<div class="frame">
-			<div class="insides">3</div>
+			<div class="insides"><p class="textInBox">3</p></div>
 		</div>
 	</section>
 	<section>
