--- a/pages/mainPage.html
+++ b/pages/mainPage.html
@@ -36,13 +36,19 @@
 	</section>
 	<section class="horizontalPlacement">
 		<div class="frame">
-			<div class="insides"><p class="textInBox">1</p></div>
+			<div class="insides">
+				<p class="textInBox">DRAG</p>
+			</div>
 		</div>
 		<div class="frame">
-			<div class="insides"><p class="textInBox">2</p></div>
+			<div class="insides">
+				<p class="textInBox">AND</p>
+			</div>
 		</div>
 		<div class="frame">
-			<div class="insides"><p class="textInBox">3</p></div>
+			<div class="insides">
+				<p class="textInBox">DROP</p>
+			</div>
 		</div>
 	</section>
 	<section>
@@ -50,9 +56,28 @@
 		<ul id="forInput">
 		</ul>
 	</section>
-	<section>
-
+	<section class="horizontalPlacement">
+		<div class="wrap">
+			<a href="#">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<p>button1</p>
+			</a>
+		</div>
+		<div class="wrap">
+			<a href="#">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<p>button2</p>
+			</a>
+		</div>
 	</section>
+	<section class="sectionWithPicture">empty</section>
+	<section>empty</section>
 	<script src="../src/main.js"></script>
 </body>
 
