--- a/pages/secondPage.html
+++ b/pages/secondPage.html
@@ -17,8 +17,8 @@
 	<menu>
 		<ul class="list" type='none'>
 			<li>polindrome</li>
-			<li>пункт меню</li>
-			<li>пункт меню</li>
+			<li>fizzbuzz</li>
+			<li>anagram</li>
 			<li>пункт меню</li>
 		</ul>
 	</menu>
